--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -49,7 +49,7 @@
         "             [\"please pay for the exam\", 1]          \n",
         "             ]"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -80,13 +80,23 @@
       },
       "source": [
         "import numpy as np\n",
-        "def email_to_feature(dict, email):\n",
-        "  raise NotImplementedError\n",
+        "def email_to_feature(ldict, email):\n",
+        "  x = np.zeros(d, int)       # numpy array VS list\n",
+        "  for i in range(d):\n",
+        "    if ldict[i] in email: x[i] = 1\n",
+        "  return x\n",
         "\n",
-        "def emails_to_test_samples(dict, test_emails):\n",
-        "  raise NotImplementedError"
+        "d = len(dictionary)\n",
+        "n = len(test_emails)\n",
+        "def emails_to_test_samples(ldict, test_emails):\n",
+        "  X = np.empty((n, d), int)\n",
+        "  Y = np.empty(n, int)\n",
+        "  for i in range(n):\n",
+        "    X[i] = email_to_feature(ldict, test_emails[i][0])\n",
+        "    Y[i] = test_emails[i][1]\n",
+        "  return X, Y"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -138,17 +148,53 @@
         "id": "8Ry9w9OtOFBi"
       },
       "source": [
+        "\n",
         "# You can implement the above algorithm in any way you want.\n",
         "# One possible way:\n",
         "# - Calculate the phis here\n",
         "# - Write functions for the probability P(x|y) depending on these phis\n",
         "# - Use this function in the function spam_percentage \n",
         "\n",
-        "def spam_percentage(email):\n",
+        "def get_phi(X, Y):\n",
+        "  result = np.empty((d, 2))\n",
         "\n",
-        "  return NotImplementedError"
+        "  for i in range(d):\n",
+        "    num0 = 1; num1 = 1; den0 = 2; den1 = 2\n",
+        "    for j in range(n):\n",
+        "      if X[j][i] == 1 and Y[j] == 1: num1 += 1\n",
+        "      elif X[j][i] == 1 and Y[j] == 0: num0 += 1\n",
+        "      if Y[j] == 1: den1 += 1\n",
+        "      elif Y[j] == 0: den0 += 1\n",
+        "    result[i] = [num0/den0, num1/den1]\n",
+        "  return result\n",
+        "\n",
+        "def get_phi_y1(Y):\n",
+        "  result = 1\n",
+        "  for y in Y:\n",
+        "    if y == 1: result += 1\n",
+        "  return result / (2+n)\n",
+        "\n",
+        "X, Y = emails_to_test_samples(dictionary, test_emails)\n",
+        "phi = get_phi(X, Y)\n",
+        "phi_y1 = get_phi_y1(Y)\n",
+        "#print(phi)\n",
+        "#print(phi_y1)\n",
+        "\n",
+        "def P(x, y):\n",
+        "  result = 1\n",
+        "  for i in range(d):\n",
+        "    if x[i] == 1:     result *= phi[i][y]\n",
+        "    elif x[i] == 0:   result *= 1 - phi[i][y]\n",
+        "  return result\n",
+        "  \n",
+        "\n",
+        "def spam_percentage(email):\n",
+        "  x = email_to_feature(dictionary, email)\n",
+        "  A = phi_y1 * P(x, 1)\n",
+        "  B = (1 - phi_y1) * P(x, 0)\n",
+        "  return A/(A+B)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -163,14 +209,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Zo_egC7AUYoq"
+        "id": "Zo_egC7AUYoq",
+        "outputId": "f708736e-8157-4fa6-c1b4-574a7832acf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "email=\"the sun is shining. buy drugs now\"\n",
-        "print(SpamPercentage(email))"
+        "print(spam_percentage(email))\n",
+        "print(spam_percentage(\"lets buy drugs\"))\n",
+        "print(spam_percentage(\"\"))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.9299429164504411\n",
+            "0.997944298092004\n",
+            "0.892430278884462\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -192,12 +254,44 @@
         "id": "1rvAqAkHz21D"
       },
       "source": [
+        "import re\n",
         "def create_dictionary(emails):\n",
-        "\n",
-        "  return NotImplementedError"
+        "  dict=[]\n",
+        "  r='[,.?;/]'\n",
+        "  for i in range(len(emails)):\n",
+        "    dict0=re.split(r,emails[i][0])\n",
+        "    for j in range(len(dict0)):\n",
+        "      dict1=dict0[j].split()\n",
+        "      for k in range(len(dict1)):\n",
+        "        if dict1[k] not in dict:\n",
+        "          dict.append(dict1[k])\n",
+        "  return dict"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lb1jenEaQvvc",
+        "outputId": "3cc26bf7-5bd0-4aef-cb28-f0288217837f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(create_dictionary(test_emails))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['hello', 'students', 'please', 'learn', 'for', 'the', 'exam', 'buy', 'drugs', 'today', 'sun', 'is', 'shining', 'in', 'nagoya', 'lets', 'sell', 'how', 'are', 'you', 'do', 'your', 'homework', 'want', 'free', 'solutions', 'hey', 'always', 'ask', 'questions', 'if', 'have', 'any', 'math', 'not', 'good', 'submit', 'pay']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
